--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.4.0.RELEASE'
+		springBootVersion = '1.4.1.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -10,7 +10,7 @@ buildscript {
 	}
 }
 
-apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 
@@ -18,15 +18,29 @@ jar {
 	baseName = 'java-app'
 	version = '0.0.1-SNAPSHOT'
 }
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
 
 dependencies {
+	// for a basic spring app
 	compile('org.springframework.boot:spring-boot-starter')
+
+	// SPOCK!!
+	testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+	// need groovy to use spock
+	testCompile "org.codehaus.groovy:groovy-all:2.4.7"
+	// spring testing goodness...
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+
+	// optional dependencies for using Spock
+	testCompile "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
+	testRuntime "cglib:cglib-nodep:3.1"          // allows mocking of classes (in addition to interfaces)
+	testRuntime "org.objenesis:objenesis:2.1"    // allows mocking of classes without default constructor (together with CGLIB)
 }
